--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "cmc-proxy",
   "version": "1.0.0",
   "description": "Nodejs Proxy for CoinMarketCap's new APIs",
-  "main": "index.js",
   "scripts": {
     "start": "node proxy.js",
-    "dev": "nodemon proxy.js",
-    "build": "echo 'no build'"
+    "dev": "nodemon proxy.js"
   },
   "repository": {
     "type": "git",
