--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
   "name": "cmc-proxy",
-  "builds": [{ "src": "proxy.js", "use": "@now/node-server" }],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "proxy.js"
+      "dest": "index.js"
     }
   ]
 }
