--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
   "version": 2,
-  "name": "cmc-proxy",
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
-  ]
+  "name": "cmc-proxy"
 }
